--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "dotenv": "^16.4.5",
         "ethers": "^5.7.2",
         "https-proxy-agent": "^7.0.5",
-        "web3-ws": "^1.0.1"
+        "web3rpcs": "^1.0.4"
     },
     "engines": {
         "node": ">=14.0.0"
